# handlers/user_transaction.go
@@ -6,29 +6,29 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary Pin telegram id to auth user
+// @Summary Pin child user UUID to auth user
 // @Security ApiKeyAuth
 // @Tags user
-// @Id pin-telegram
+// @Id pin-user
 // @Accept json
 // @Produce json
-// @Param id path string true "telegram Id"
+// @Param uuid path string true "child user"
 // @Success 200
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /api/user/telegram{id} [post]
-func (h *Handler) pinTelegramId(c *gin.Context) {
-	id := c.Param("id")
+// @Router /api/user/pin{uuid} [post]
+func (h *Handler) pinUserToUser(c *gin.Context) {
+	id := c.Param("uuid")
 	if id == "" {
-		c.AbortWithStatusJSON(http.StatusBadRequest, "id is null")
+		c.AbortWithStatusJSON(http.StatusBadRequest, "uuid is null")
 	}
 
 	userUUID, err := getUserUUID(c)
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, err.Error())
 	}
-	err = h.service.User.PinTelegramId(c, userUUID, id)
+	err = h.service.User.PinUserToUser(c, userUUID, id)
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, err.Error())
 	}
